CDR-1960 review cleanup